syntax = "proto3";

package service;

option go_package = "/pb;pb";

service UserService {
  rpc LoginUser (LoginRequest) returns (LoginResponse);
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}